<resources>
    <!-- Shared -->
    <string name="app_name">CPA Wellness App</string>
    <string name="button_back">Back</string>
    <!-- Home Page -->
    <string name="button_settings">Settings</string>
    <string name="button_record_today">Record Today</string>
    <string name="button_stats">Stats</string>
    <string name="button_diary">Diary</string>
    <string name="button_help">Help</string>
    <string name="title_activity_help">Help</string>

    <!-- Help Page -->
    <string name="help_text1">Welcome to CPA wellness app!</string>
    <string name="heading1">Record Diary</string>
    <string name="heading2">Stats</string>
    <string name="heading3">Diary</string>

    <string name="sub_text1">To record your daily wellness check use the record button.
    \nYou will be asked a question and we will record your answer!
    \nOur app uses AI to determine your happiness score based on your answer.</string>
    <string name="sub_text2">In the stats page we will record your dialy happiness score and broadcast this back to you to show your progress!</string>
    <string name="sub_text3">This page will play back your weekly diary entries so you can see your progress over time!</string>

    <string name="text_help_screen">
        Welcome to CPA wellness app!
        \nRecord Diary
        \nTo record your daily wellness check use the record button.
        \nYou will be asked a question and we will record your answer!
        Our app uses AI to determine your happiness score based on your answer.
        \nStats
        \nIn the stats page we will record your dialy happiness score and broadcast this back to you to show your progress!
        \nDiary
        \nThis page will play back your weekly diary entries so you can see your progress over time!
    </string>

    <!-- Diary Menu -->
    <string name="button_record_diary">Record Diary Log</string>
    <string name="button_view_diaries">View Past Diaries</string>
    <!--Diary Record -->
    <string name="button_record">Record</string>

    <!-- Settings  -->
    <string name="reset_app">Reset Data on App</string>
    <string name="title_activity_diary_list">DiaryList</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>