<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonActivity"
        android:text="@string/button_settings"
        android:textSize="10sp"
        android:textColor="#EAE0E0"
        android:backgroundTint="#A61D1D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#A61D1D"
        android:onClick="onButtonActivity"
        android:text="@string/button_record"
        android:textColor="#EAE0E0"
        app:layout_constraintBottom_toTopOf="@+id/buttonStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#A61D1D"
        android:onClick="onButtonActivity"
        android:text="@string/button_stats"
        android:textColor="#EAE0E0"
        app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onButtonActivity"
        android:text="@string/button_help"
        android:textColor="#EAE0E0"
        android:backgroundTint="#A61D1D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="423dp"
        android:layout_height="265dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/wellness2"
        app:layout_constraintBottom_toTopOf="@+id/buttonRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
